--- a/assetts/components/test/black/schedule.css
+++ b/assetts/components/test/black/schedule.css
@@ -79,6 +79,7 @@ body {
     font-family: "Titillium Web";
     font-size: 17px;
     line-height: 23px;
+    color: white;
     letter-spacing: 0.2px;
     background: rgb(255, 255, 255);
     background-size: 100%;
@@ -88,11 +89,12 @@ body {
     background-attachment: initial;
     background-origin: initial;
     background-clip: initial;
-    background-color: rgb(255, 255, 255);
+    /*background-color: rgb(255, 255, 255);*/
+    background-color: rgb(0, 0, 0);
 } 
 
 body { 
-    margin-top: 120px;
+    /*margin-top: 120px;*/
 } 
 
 html { 
@@ -212,7 +214,7 @@ html {
 } 
 
 .f1-bg--white { 
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(29, 29, 29);
 } 
 
 p { 
@@ -306,7 +308,7 @@ p {
     margin-right: auto;
     margin-bottom: 0px;
     margin-left: auto;
-    background: rgb(237, 237, 237) none repeat scroll 0% 0% / auto padding-box border-box
+    background: rgb(59, 59, 59) none repeat scroll 0% 0% / auto padding-box border-box
 } 
 
 .f1-title { 
@@ -314,7 +316,7 @@ p {
     font-size: 30px;
     line-height: 24px;
     margin-bottom: 1em;
-    margin-top: 1em;
+    /*margin-top: 1em;*/
 } 
 
 .f1-timetable--title { 
